# adeu

./: .gitignore  AGENTS.md  AI_CONTEXT.md  Adeu_QA_Report_2026-04-27.md  Adeu_v2_Validation_Findings.md  Adeu_v2_Validation_Resumed.md  CONTRIBUTING.md  GEMINI.md  PLAN.md  README.md  TODO.md  gemini-extension.json  probe.py  prof.py  pyproject.toml  test.py
.claude-plugin/: marketplace.json
.gemini/: settings.json
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  ecosystem-rot-pruner.yml  release.yml
desktop-extension/: manifest.json
docs/: FIDELITY.md  FREE_AGENT_PROBLEM.md  claude-for-legal-impact-analysis.md  spec-consistency-framework.md  spec-monorepo-node-port.md
docs/domain-gaps/: spec-appendix-schema.md  spec-link-policy.md  spec-projection-syntax.md
ecosystem/: README.md  VENDOR_POLICY.md
langchain/: pyproject.toml
langchain/langchain_adeu/: accept_all_changes.py  apply_changes.py  diff_docx.py  read_docx.py  sanitize_docx.py
langchain/tests/unit_tests/: test_apply_changes.py  test_diff_docx.py  test_read_docx.py  test_sanitize_docx.py
node/: package-lock.json  package.json  test.mjs
python/: pyproject.toml  server.json
python/scripts/: abstract_xml.py  generate_goldens.py  verify_reasoning_order.py
python/src/adeu/: cli.py  diff.py  domain.py  ingest.py  markup.py  models.py  outline.py  pagination.py  server.py
python/src/adeu/mcp_components/: _response_builders.py  shared.py
python/src/adeu/mcp_components/tools/: auth.py  document.py  email.py  live_word.py  sanitize.py  validation.py
python/src/adeu/redline/: comments.py  engine.py  mapper.py
python/src/adeu/sanitize/: core.py  report.py  transforms.py
python/src/adeu/utils/: docx.py  xml_debug.py
python/tests/: conftest.py  test_atomic_batch_pipeline.py  test_batch_reliability.py  test_cli_bug_repro.py  test_cli_features.py  test_cli_init.py  test_comments_threading.py  test_cross_platform_consistency.py  test_dry_run_validation.py  test_email_tools.py  test_fixtures_verification.py  test_gemini_schema_compat.py  test_live_word.py  test_live_word_dispatch.py  test_regressions.py  test_reject_and_nested_redline.py  test_repro_accept_all_changes_leak.py  test_repro_benchmark_schema_failures.py  test_repro_chg_id_coalescing.py  test_repro_comment_fragment_reject.py  test_repro_comments_cleanup.py  test_repro_feedback_layer.py  test_repro_feedback_observations.py  test_repro_foreign_comment_range_modify.py  test_repro_indexed_edits.py  test_repro_invisible_replies.py  test_repro_issue23.py  test_repro_nested_corruption.py  test_repro_qa_2026_07_18.py  test_repro_qa_issues_v2.py  test_repro_qa_mcp_2026_07_23_engine.py  test_repro_qa_mcp_2026_07_23_reports.py  test_repro_qa_mcp_issues_2026_07_20.py  test_repro_qa_report_cli_2026_07_22.py  test_repro_qa_report_v3.py  test_repro_qa_report_v4.py  test_repro_qa_report_v5.py  test_repro_qa_report_v6.py  test_repro_qa_report_v7.py  test_repro_qa_report_v9.py  (+7 more)
scripts/: bump.py  disable_test_creator_mode.py  enable_test_creator_mode.py  patch_smithery_mcpb.py  setup-hooks.ps1  setup-hooks.sh
shared/cross_platform_tests/01_basic_text_modification/: golden_abstract.xml  golden_clean.md  golden_raw.md  test.json
skills/adeu-redlining/: LICENSE.txt  SKILL.md
skills/adeu-redlining/references/: cli-fallback.md  criticmarkup.md  mcp-tools.md
src/adeu/: cli.py  diff.py  domain.py  ingest.py  markup.py  models.py  outline.py  pagination.py
src/adeu/mcp_components/: _response_builders.py
src/adeu/mcp_components/tools/: document.py  email.py  live_word.py  live_word_ops.py
src/adeu/redline/: comments.py  engine.py  mapper.py
src/adeu/sanitize/: core.py
src/adeu/utils/: docx.py
tests/: conftest.py  docx_fixtures.py  test_clean_view.py  test_comments_threading.py  test_domain_appendix.py  test_domain_footnotes.py  test_domain_links.py  test_domain_semantics.py  test_live_word.py  test_live_word_structured_insertion.py  test_markup.py  test_natural_diffs.py  test_pure_comment_disk.py  test_regressions.py  test_repro_comments_cleanup.py  test_repro_cross_para_merge.py  test_repro_fuzzy_regex_timeout.py  test_repro_id_pool_renumber.py  test_repro_live_run_fragmentation.py  test_repro_live_word_docstring.py  test_repro_qa_report.py  test_repro_round16_bugs.py  test_repro_smithery_release_workflow.py  test_sanitize.py  test_style_cache_optimization.py  test_table_structural_edits.py  test_tables.py  utils.py
