[project]
name = "adeu"
version = "1.2.0"
description = "Automated DOCX Redlining Engine"
authors = [
    { name = "Mikko Korpela" },
    { name = "Uzair Ahmed" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-docx>=1.1.0",
    "structlog>=24.0.0",
    "pydantic>=2.0.0",
    "lxml>=5.0.0",
    "diff-match-patch>=20230430",
    "keyring>=25.7.0",
    "fastmcp[apps]>=3.1.1",
    "jinja2>=3.1.6",
    "pywin32; sys_platform == 'win32'",
]

[project.scripts]
adeu = "adeu.cli:main"
adeu-server = "adeu.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "hypothesis",
    "pre-commit>=4.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/adeu"]
artifacts = [
    "src/adeu/assets/*.js",
    "src/adeu/assets/*.png",
    "src/adeu/templates/*.html",
    "src/adeu/assets/*.svg",
]
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "diff_match_patch.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
