[project]
name = "langchain-adeu"
version = "1.29.0"
description = "LangChain integration for Adeu — track-changes for DOCX in the LLM era"
authors = [
    { name = "Mikko Korpela" },
    { name = "Uzair Ahmed" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["langchain", "docx", "redlining", "tracked-changes", "agent", "tools", "word"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3.0,<2.0.0",
    "adeu>=1.17.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://adeu.ai"
Repository = "https://github.com/dealfluence/adeu"
"Bug Tracker" = "https://github.com/dealfluence/adeu/issues"
Documentation = "https://github.com/dealfluence/adeu/tree/main/langchain"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langchain_adeu"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-socket>=0.7.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-socket>=0.7.0",
    "langchain-tests>=0.3.0",
]

# Local development: use the sibling adeu package directly so changes
# to the core SDK are picked up without republishing. Published wheels
# resolve `adeu` from PyPI as declared in [project.dependencies].
[tool.uv.sources]
adeu = { path = "../python", editable = true }

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"